--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,11 @@ li{
     color: #878787;
     margin: 0;
     padding: 5px 0;
-    text-transform: capitalize;
+   
+}
+
+li::first-letter{
+text-transform: capitalize;
 }
 
 footer{
