--- a/src/style.css
+++ b/src/style.css
@@ -92,3 +92,22 @@ footer{
 .weather-temperature .active:hover {
     text-decoration: none;
 }
+
+.weather-forecast{
+    margin-top: 20px;
+    text-align: center;
+    
+    
+}
+.weather-forecast-date {
+    
+    font-size: 16px;
+}
+
+.weather-forecast-temperature-min  {
+    font-size: 13px;
+    opacity: 80%;
+} 
+.weather-forecast-temperature-max{
+    font-size: 13px;
+}
