--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body{
 
 
 h1 {
-color: #747474;
+color: #1e1d1d;
 font-size: 24px;
 font-weight: 100;
 line-height: 29px;
@@ -21,7 +21,7 @@ li{
     font-size: 16px;
     font-weight: 100;
     line-height: 19px;
-    color: #878787;
+    color: #323538;
     margin: 0;
     padding: 5px 0;
    
@@ -37,11 +37,13 @@ footer{
 }
 
 .weather {
-    width: 600 px;
+    width: 500 px;
     margin: 30px auto;
     padding: 20px;
     border: 1px solid #dadde1;
     border-radius: 5px;
+    /*background: linear-gradient(181.2deg, rgb(37, 183, 209) 10.5%, rgb(254, 254, 254) 86.8%);*/
+    background-image:url(../img/pexels-skitterphoto-675977.jpg)  ;
 }
 
 .WeatherInfo{
@@ -101,6 +103,7 @@ footer{
 }
 .weather-forecast-date {
     
+    
     font-size: 16px;
 }
 
@@ -110,4 +113,16 @@ footer{
 } 
 .weather-forecast-temperature-max{
     font-size: 13px;
+}
+
+.weather-daily {
+    border: solid 1px ;
+}
+
+.col-2 {
+
+    margin: 20px;
+    width: 150px;
+    padding: 50px 5px;
+
 }
